# ROS_Multidrone

./: .gitignore  README.md
hector_gazebo_plugins/: CMakeLists.txt~
hector_gazebo_plugins/include/hector_gazebo_plugins/: gazebo_ros_es.h~
hector_pollution_msgs/: CMakeLists.txt~  package.xml
hector_quadrotor_navi/: CMakeLists.txt  CMakeLists.txt~  package.xml
hector_quadrotor_navi/launch/: Untitled Document~  navigate.launch  navigate.launch~
hector_quadrotor_navi/src/: long_val.txt  quadrotor_navi.cpp~
multi_uav_quad/src/state_control/: CMakeLists.txt
native_config/: README.MD  px4.config  px4.launch
native_config/eeprom/: parameters
ros_arducopter/testnavi/devel/: .catkin  .rosinstall  setup.sh
ros_hector_ver/hector_gazebo_plugins/src/: gazebo_ros_es.cpp
ros_hector_ver/hector_pollution_msgs/msg/: Pollution.msg
ros_hector_ver/hector_quadrotor_gazebo/urdf/: quadrotor_sensors.gazebo.xacro  quadrotor_sensors.gazebo.xacro~
ros_hector_ver/hector_quadrotor_navi/src/: alt_val.txt  alt_val.txt~
ros_px4/testnavi/devel/: .rosinstall  setup.sh
ros_px4_multi/: generate_model.pl
ros_px4_multi/testnavi/devel/: .catkin
scripts/: README.md  comm_vis_demo.py  gen_models.py  generate_model.pl  launch_sim.sh  start_drones.sh  start_drones_cpp.sh  start_drones_py.sh  start_gazebo.sh  start_ros_nodes.sh  start_sim.sh
src/drone/: CMakeLists.txt
src/drone/msg/: GridTx.msg
src/drone/scripts/: sim_utils.py
src/dronecpp/: CMakeLists.txt  package.xml
src/dronecpp/src/: single_drone.cpp
src/dronepy/: package.xml
src/state_control/: README  package.xml
(+119 files in other folders)
