<package>
  <name>hector_quadrotor_navi</name>
  <version>0.3.5</version>
  <description>hector_quadrotor_navi.</description>
  <maintainer email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_quadrotor_teleop</url>
  <url type="bugtracker">https://github.com/tu-darmstadt-ros-pkg/hector_quadrotor/issues</url>

  <author email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hector_uav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geodesy</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hector_uav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geodesy</run_depend>
  <!--run_depend>joy</run_depend-->

  <!-- Dependencies needed only for running tests. -->

</package>
